--- a/FullStackTechnicalTest/Services/Services.csproj
+++ b/FullStackTechnicalTest/Services/Services.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Business\TaskManager.cs" />
     <Compile Include="Controllers\Task.cs" />
     <Compile Include="Data\DataModel.cs" />
     <Compile Include="Data\Migrations\202112092144072_PriorityAndTask.cs" />
@@ -215,6 +216,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\TaskManager\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
