--- a/FullStackTechnicalTest/Services/Services.csproj
+++ b/FullStackTechnicalTest/Services/Services.csproj
@@ -216,6 +216,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Base\" />
     <Folder Include="Views\TaskManager\" />
   </ItemGroup>
   <ItemGroup>
