--- a/FrontAngular/angular.json
+++ b/FrontAngular/angular.json
@@ -30,7 +30,10 @@
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./src/Scripts/jquery-3.4.1.js",
+              "./src/Scripts/jquery-3.4.1.min.js"
+            ]
           },
           "configurations": {
             "production": {
